@@ -1,0 +1,5 @@
+;;;
+
+(require 'semantic-sb)
+
+;;;
