@@ -1,0 +1,46 @@
+;;; speedbar.ecf --- Load speedbar settings -*- coding: iso-2022-7bit-unix; -*-
+
+;; Add bindings to make it easier to use speedbar.
+;; If you want to choose it from a menu, such as "Tools", and it doesn't
+;; already exist in your version of Emacs.
+
+(define-key-after (lookup-key global-map [menu-bar tools])
+      [speedbar] '("Speedbar" . speedbar-frame-mode) [calendar]
+)
+
+;   XEmacs:
+;   (add-menu-button '("Tools")
+;		      ["Speedbar" speedbar-frame-mode
+;		       :style toggle
+;		       :selected (and (boundp 'speedbar-frame)
+;				      (frame-live-p speedbar-frame)
+;				      (frame-visible-p speedbar-frame))]
+;		      "--")
+
+;; Access speedbar using only the keyboard.
+(global-set-key [(f4)] 'speedbar-get-focus)
+
+;; Texinfo fancy chapter tags
+(add-hook 'texinfo-mode-hook (lambda () (require 'sb-texinfo)))
+
+;; HTML fancy chapter tags
+(add-hook 'html-mode-hook (lambda () (require 'sb-html)))
+
+;; For any verison of emacs on a linux RPM based system:
+(autoload 'rpm "sb-rpm" "Rpm package listing in speedbar.")
+
+;   For XEmacs, or Emacs earlier than 20.2:
+
+;; chapter listings
+(autoload 'Info-speedbar-buttons "sb-info" "Info specific speedbar button generator.")
+;; folder listings
+(autoload 'rmail-speedbar-buttons "sb-rmail" "Rmail specific speedbar button generator.")
+;; current stack display
+(autoload 'gud-speedbar-buttons "sb-gud" "GUD specific speedbar button generator.")
+
+;For an info mode in Emacs 20.x and XEmacs, it may be necessary to
+;do this instead:
+;(eval-after-load "info" '(require 'sb-info))
+
+
+;;; speedbar.ecf ends here
